# Multithreaded-File-Downloader

./: .gitignore  README.md
MultithreadedFileDownloader/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
MultithreadedFileDownloader/src/: main.cpp
MultithreadedFileDownloader/src/core/: Downloader.cpp  Downloader.h  ThreadPool.cpp  ThreadPool.h
MultithreadedFileDownloader/src/network/: HTTPClient.cpp  HTTPClient.h
MultithreadedFileDownloader/src/utils/: FileManager.cpp  FileManager.h  Logger.cpp  Logger.h
